test/scc/decl/semantic-errors/077.t
void test()
{
    _Thread_local int a;
}